Fix invisible site chat user from not rendering for mods

--- a/web/extensions/sitechat/styles/mafBlack/theme/siteChat.css
+++ b/web/extensions/sitechat/styles/mafBlack/theme/siteChat.css
@@ -853,7 +853,7 @@
 	padding-bottom:5px;
 }
 
-#chatPanel .invisible{
+#chatPanel .invisibleUser {
 	font-style:italic;
 }
 
