--- a/web/extensions/sitechat/styles/mafSepia/theme/siteChat.css
+++ b/web/extensions/sitechat/styles/mafSepia/theme/siteChat.css
@@ -781,7 +781,7 @@
 	padding-bottom:5px;
 }
 
-#chatPanel .invisible{
+#chatPanel .invisibleUser{
 	font-style:italic;
 }
 
