--- a/web/extensions/sitechat/styles/mafSilver/theme/siteChat.css
+++ b/web/extensions/sitechat/styles/mafSilver/theme/siteChat.css
@@ -849,7 +849,7 @@
 	padding-bottom:5px;
 }
 
-#chatPanel .invisible{
+#chatPanel .invisibleUser{
 	font-style:italic;
 }
 
